--- a/app/views/HomeView.html
+++ b/app/views/HomeView.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-8">
+        <div class="col-8" id="active-pokemon">
             <div>
                 <h2>Pokemon name</h2>
                 <img src="https://images.unsplash.com/photo-1605979257913-1704eb7b6246?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
